tests/errors/preprocessor/invalid_parenthesis_entry.c
#define func(a, b) a + b

void main()
{
	func(1, 2;
}
